crates/ddlog-syntax/tests/parse/fail/unclosed_paren.dl
// kind:expr validate:false pass:false ignore:false file:'ddlog-syntax/src/parser/expr.rs' line:510 column:3
(((100))
